Adjusted minor spacing issues on Flexbox exercise.

--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -86,11 +86,13 @@ section:nth-of-type(1) div:last-child {
 section:nth-of-type(3) {
     flex-direction: row;
     justify-content: flex-end;
+    margin-top: .5em;
     /* enter needed declarations here */
 }
 
 section:nth-of-type(3) h3 {
     flex-grow: 1;
+    margin-top: .5em;
     /* enter needed declarations here */
 
 }
